--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Guess the Words:</p>
     <p id="wordSpotlight">The word to be guessed goes here</p>
     <div id="keyboard"></div>
-    <button class="btn btn-info" onClick="reset()">Reset</button>
+    <button class="btn btn-warning" onClick="reset()">Reset</button>
   </div> 
 </div>
 
