--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <!-- Bootstrap 4 CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-  <title>Words Game</title>
+  <title>Word Game</title>
 </head>
 <body>
 <div class="container">
-  <h1 class="text-center">Words Game</h1>
+  <h1 class="text-center">Word Game</h1>
   <div class="float-right">Wrong Guesses: <span id='mistakes'>0</span> of <span id='maxWrong'></span></div>
   <div class="text-center">
     <img id='hangmanPic' src="./images/0.jpg" alt="">
-    <p>Guess the Words:</p>
+    <p>Guess the Word:</p>
     <p id="wordSpotlight">The word to be guessed goes here</p>
     <div id="keyboard"></div>
     <button class="btn btn-warning" onClick="reset()">Reset</button>
